# plastic-agent-net

./: .gitignore  README.md  pyproject.toml  vercel.json
api/: start.py
public/: app.js  config.js  index.html  styles.css
src/plastic_agent_net/: __init__.py  cli.py
src/plastic_agent_net/agents/: base.py  coder.py  debugger.py  planner.py  repo_mapper.py  reviewer.py  synthesizer.py  test_writer.py  verifier_coordinator.py
src/plastic_agent_net/config/: defaults.py  templates.py
src/plastic_agent_net/control/: controller.py  merge_rules.py  prune_rules.py  scoring.py  spawn_rules.py
src/plastic_agent_net/core/: budgets.py  graph.py  messages.py  models.py
src/plastic_agent_net/dashboard/: routes.py  server.py
src/plastic_agent_net/db/: __init__.py  client.py  graph_adapter.py  repository.py
src/plastic_agent_net/eval/: logging.py  replay.py
src/plastic_agent_net/llm/: client.py
src/plastic_agent_net/memory/: artifact_store.py  memory_manager.py
src/plastic_agent_net/prompts/: renderer.py  schemas.py
src/plastic_agent_net/runtime/: dispatcher.py  episode.py  task_encoder.py  verifier.py
src/plastic_agent_net/tools/: build.py  lint.py  patch.py  repo.py  security.py  tests.py  workspace.py
supabase/: config.toml
supabase/functions/run-episode/: controller.ts  index.ts  (+2 more)
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_scoring_functions.sql
tests/: test_artifact_store.py  test_controller.py  test_dispatcher.py  test_episode.py  test_graph.py  test_messages.py  test_models.py  test_prompt_renderer.py  test_scoring.py
(+3 files in other folders)
