[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plastic-agent-net"
version = "0.1.0"
description = "Dynamically rewiring, persona-conditioned graph of LLM-backed coding agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
pan = "plastic_agent_net.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/plastic_agent_net"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
